<resources>
    <string name="app_name">My App</string>
    <string name="title">Movie Title</string>
    <string name="hint_title">Enter movie title here</string>
    <string name="singers">Actors</string>
    <string name="hint_singers">Enter actor\' name here</string>
    <string name="year">Year</string>
    <string name="hint_year">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="title_activity_main">Insert Movie</string>
    <string name="title_activity_second">Show Movie</string>
    <string name="title_activity_third">Modify Movie</string>

    <string name="id">Movie ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all movies with 5 stars</string>
    <string name="actors">Actors</string>
</resources>